--- a/_pages/talkmap.html
+++ b/_pages/talkmap.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: archive
 title: "Talk map"
 permalink: /talkmap.html
@@ -6,4 +6,47 @@ author_profile: true
 ---
 
 <p>This map is generated from a Jupyter Notebook file in <a href="https://github.com/academicpages/academicpages.github.io/blob/master/_talks/talkmap.ipynb">/_talks/talkmap.ipynb</a>, which mines the location fields in the .md files in _talks/.</p>
-<iframe src="/talkmap/map.html" height="700" width="850" style="border:none;"></iframe>
+<iframe src="/talkmap/map.html" height="700" width="850" style="border:none;"></iframe> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Under Construction</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f8f8f8;
+            color: #333;
+        }
+        .construction {
+            text-align: center;
+        }
+        .construction img {
+            width: 150px;
+            height: auto;
+            margin-bottom: 20px;
+        }
+        .construction h1 {
+            font-size: 2em;
+            margin-bottom: 10px;
+        }
+        .construction p {
+            font-size: 1.2em;
+        }
+    </style>
+</head>
+<body>
+    <div class="construction">
+        <img src="https://via.placeholder.com/150?text=🚧" alt="Construction Icon">
+        <h1>Under Construction</h1>
+        <p>I am currently working on this page. Please check back later!</p>
+    </div>
+</body>
+</html>
