--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: archive
 permalink: /year-archive/
 title: "Blog posts"
@@ -16,4 +16,47 @@ redirect_from:
     {% capture written_year %}{{ year }}{% endcapture %}
   {% endif %}
   {% include archive-single.html %}
-{% endfor %}
+{% endfor %} -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Under Construction</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f8f8f8;
+            color: #333;
+        }
+        .construction {
+            text-align: center;
+        }
+        .construction img {
+            width: 150px;
+            height: auto;
+            margin-bottom: 20px;
+        }
+        .construction h1 {
+            font-size: 2em;
+            margin-bottom: 10px;
+        }
+        .construction p {
+            font-size: 1.2em;
+        }
+    </style>
+</head>
+<body>
+    <div class="construction">
+        <img src="https://via.placeholder.com/150?text=🚧" alt="Construction Icon">
+        <h1>Under Construction</h1>
+        <p>I am currently working on this page. Please check back later!</p>
+    </div>
+</body>
+</html>
